# widtools

./: .gitignore  CMakeLists.txt  README.md
4bsp/: 4bsp.c  4bsp.vcxproj  brushbsp.c  faces.c  map.c  qbsp.h
4data/: 4data.c  4data.vcxproj
4rad/: 4rad.c  4rad.vcxproj  lightmap.c  patches.c
4vis/: 4vis.vcxproj
common/: bspfile.c  cmdlib.c  mathlib.h  qfiles.h  trilib.c
widbsp/: faces.c  gldraw.c  main.c  map.c  portals.c
widdata/: images.c  models.c  sprites.c  tables.c  video.c  widdata.c  widdata.h
widrad/: lightmap.c  main.c  qrad.h
widvis/: main.c
